samples/_failures_safe/1761371652_f8c16f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fa4aec3.c: In function ‘main’:
./samples/SAFE/__tmp_1fa4aec3.c:169:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  169 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_1fa4aec3.c:169:5: error: expected declaration or statement at end of input
